--- a/app/templates/app/homepage.html
+++ b/app/templates/app/homepage.html
@@ -1,9 +1,9 @@
 {% extends 'app/base.html' %}
 {% load static %}
-{% block title %} Homepage {% endblock %}
+{% block title %}{% endblock %}
 {% block css %}
     <link rel="stylesheet" href="{% static  'css/homepage.css' %}">
 {% endblock %}
 {% block content %}
-    <p>{{mensagem}}</p>
+    <h1>Implementar</h1>
 {% endblock %}
