criando a lógica de criar conta e login, além de redirecionar o usuário para definir o username, por conta do Google não conseguir definir o username, não consegui criar o adapter.py e sobescreveo auth.

--- a/app/templates/app/perfil.html
+++ b/app/templates/app/perfil.html
@@ -7,9 +7,9 @@
     <div class="card">
         <img src="" alt="implementar">
         <div class="descricao">
-            <p>Username: Gabriel Gattini</p>
-            <p>Email: gabrielgattini659@gmail.com</p>
-            <p>Criado em: 2024/12/17</p>
+            <p>Bem-vindo ao seu perfil {{user.perfil.nome}}</p>
+            <p>Username: {{user.username}}</p>
+            <p>Email: {{user.email}}</p>
         </div>
     </div>
 {% endblock %}
