--- a/app/templates/app/criar_conta.html
+++ b/app/templates/app/criar_conta.html
@@ -6,6 +6,16 @@
 {% endblock %}
 
 {% block content %}
+    {% if erro %}
+        <p class="erro">{{erro}}</p>
+    {% endif %}
+    <div class="container-messages">
+        {% if messages %}
+            {% for message in messages %}
+                <p class='message'>{{message}}</p>
+            {% endfor %}
+        {% endif %}
+    </div>
     <div class="container-form">
         <h2>Registrar</h2>
         <form method="post">
