--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -6,14 +6,17 @@
 {% endblock %}
 
 {% block content %}
+    <div class="container-messages">
+        {% if messages %}
+            {% for message in messages %}
+                <p class='message'>{{message}}</p>
+            {% endfor %}
+        {% endif %}
+    </div>
     <div class="container-form">
         <h2>Faça seu Login</h2>
         <form method="post">
             {% csrf_token %}
-            <div class="inputs-labels">
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome" placeholder="Nome Completo">
-            </div>
             <div class="inputs-labels">
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email"  placeholder="E-mail">
