backend do criar conta funcionando, agora vou testar pra ver se a API loga tambem

--- a/app/templates/app/definir_username.html
+++ b/app/templates/app/definir_username.html
@@ -13,4 +13,9 @@
             <button type="submit">Salvar</button>
         </form>
     </div>
+    <!-- <script>
+        setTimeout(() => {
+        window.location.href = '{% url "homepage" %}'
+        }, 3000);
+    </script> -->
 {% endblock %}
