--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,11 +1,14 @@
 <nav>
     <div class="container-nav">
-        <h1>Google Login</h1>
+        <h1><a class="brand" href="{% url 'homepage' %}">Google Login</a></h1>
         <div class="nav-links">
-            <a class="a-nav" href="{% url 'perfil' %}">Perfil</a>
-            <a class="a-nav" href="{% url 'fazer_login' %}">Login</a>
-            <a class="a-nav" href="{% url 'criar_conta' %}">Criar Conta</a>
-            <a  class="a-nav" href="#">Sair</a>
+            {%  if user.is_authenticated %}
+                <a class="a-nav" href="{% url 'perfil' %}">Perfil | {{user.username}}</a>
+                <a  class="a-nav" href="{% url 'fazer_logout' %}">Sair</a>
+            {% else %}
+                <a class="a-nav" href="{% url 'fazer_login' %}">Login</a>
+                <a class="a-nav" href="{% url 'criar_conta' %}">Criar Conta</a>
+            {% endif %}
         </div>
     </div>
 </nav>
